assets/js/components/Exercises/CurrentExercise/style.scss
@import "../../../../styles/variable.scss";

.current-exercise * {
  color: #fff;
}

.current-exercise {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  flex: 1;
  margin: 4px 0 20px 0;
  transition: all 0.3s ease-out;
  background-color: #0d0d0d;
  border-radius: 5px;
  position: relative;
  padding: 10px 0;

  img {
    height: 185px;
    margin-top: 10px;
  }

  .current-exercise-informations {
    text-align: center;
    margin-top: 20px;
    width: 100%;
    // position: absolute;
    // left: 50%;
    // top: 64%;
    // transform: translate(-50%, -50%);
    // min-height: 100px;
    // display: flex;
    // justify-content: center;
    // align-items: center;
    // flex-direction: column;
    margin-bottom: 55px;

    @media screen and (max-height: 675px) {
      top: 77%;
    }

    > div {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;

      h3 {
        font-size: 80px;
        margin: 0;
        line-height: 20px;
        padding: 0 60px;
        margin-bottom: 20px;

        span {
          font-size: 30px;
        }
      }

      p {
        font-weight: 700;
        font-size: 20px;
      }
    }
  }

  .arrow-icon {
    height: 2.8em;
    width: 2.8em;
    display: block;
    padding: 0.5em;
    margin: 1em auto;
    cursor: pointer;
    border-radius: 4px;
    position: absolute;
    bottom: 0;
    transition: all 0.4s;
    right: -3%;
    top: 65%;
    transform: translate(-50%, -50%) rotate(-90deg);
    z-index: 10;
    opacity: 0.9;

    .left-bar {
      position: absolute;
      background-color: transparent;
      top: 18px;
      left: -18px;
      width: 45px;
      height: 8px;
      display: block;
      transform: rotate(35deg);
      float: right;
      border-radius: 2px;

      &:after {
        content: "";
        background-color: $theme-color;
        width: 45px;
        height: 8px;
        display: block;
        float: right;
        border-radius: 6px 10px 10px 6px;
        transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 0.8);
        z-index: -1;
      }
    }

    .right-bar {
      position: absolute;
      background-color: transparent;
      top: 18px;
      left: 14px;
      width: 45px;
      height: 8px;
      display: block;
      transform: rotate(-35deg);
      float: right;
      border-radius: 2px;

      &:after {
        content: "";
        background-color: $theme-color;
        width: 45px;
        height: 8px;
        display: block;
        float: right;
        border-radius: 10px 6px 6px 10px;
        transition: all 0.5s cubic-bezier(0.25, 1.7, 0.35, 0.8);
        z-index: -1;
      }
    }
  }
}

